# unc-backrooms

./: .env.example  Cargo.toml  README.md  package.json  rustfmt.toml  setup-reactions.sql  unc.md  vercel.json
api/: tick.js
public/: app.js  index.html  style.css
src/: main.rs
src/engine/: context_builder.rs  mod.rs  speaker_selector.rs  tick.rs
src/entities/: mod.rs  personality.rs
src/entities/prompts/: jerome.txt  raj.txt  rick.txt  sione.txt  wei.txt
src/memory/: mod.rs
src/protocol/: archival.rs  containment.rs  mod.rs
src/stream/: mod.rs
